refactor integrational test to use getFirst